[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lunchmoneypay"
version = "0.1.0"
description = "Mock payment-processing service for Homesteady integrations."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
  { name = "Nathan Brenton" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "email-validator>=2.2,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0,<2.2",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.15,<2.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<10.0",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
